# XiaoYan

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: test_auth_flow.py  test_base_sync.py  test_db_manager.py  test_doc_writer.py  test_engine.py  test_scraper_cli.py
xiaoyan/: __init__.py  __main__.py  cli.py  config.py  setup.py
xiaoyan/core/: adaptive_search.py  db.py  engine.py  intent.py  memory.py  profile.py  report.py  scheduler.py  settings_flow.py  utils.py
xiaoyan/lark/: __init__.py  base_sync.py  card_builder.py  doc_writer.py  event_listener.py  messenger.py
xiaoyan/scraper/: __init__.py  __main__.py  auth_flow.py  bib_parser.py  browser_core.py  cnki_ultimate.py  config.py  db_manager.py  journal_rank.py  wos_ultimate.py
